added categories table and basic catagory testing
