# backend/api/openapi.yaml
@@ -124,6 +124,27 @@ paths:
     #     409:
     #       description: Item already listed
 
+  /category:
+    get:
+      description: Get a category
+      parameters:
+        - name: category
+          in: query
+          description: category id
+          required: false
+          schema:
+            type: string
+            format: uuid
+      responses:
+        200:
+          description: Got Category
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CategoryResponse'
+        404:
+          description: Category not found
+
 components:
   schemas:
     Error:
@@ -198,23 +219,32 @@ components:
         accessToken:
           type: string
 
-    Category:
+    CategoryResponse:
       type: object
       properties:
-        name:
-          type: string
+        category:
+          $ref: '#/components/schemas/Category'
         subcategories:
           type: array
           items:
             $ref: '#/components/schemas/Category'
-        attributeList:
+        filters:
           type: array
           items:
             type: string
             pattern: '^\w+$'
       required:
-        - name
+        - category
       additionalProperties: false
+
+    Category:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+        name:
+          type: string
 
     Item:
       type: object
